--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
                 </div>
             </div>
         </section>
+<section class="skills">
+    <h2>My Skills</h2>
+    <div class="skills-container">
+        <div class="skill-item">HTML</div>
+        <div class="skill-item">CSS</div>
+        <div class="skill-item">SPCK Editor</div>
+        <div class="skill-item">GitHub</div>
+    </div>
+</section>
 
         <section id="projects" class="projects">
             <h2>Proyek</h2>
