--- a/index.html
+++ b/index.html
@@ -36,17 +36,16 @@
             <h2>About Me! </h2>
             <div class="bio-container">
                 <p>Saya adalah web developer pemula yang sedang belajar dan membangun berbagai project sederhana. Saya tertarik dengan front-end development dan terus mengembangkan kemampuan saya melalui latihan dan proyek pribadi.</p>
-                <div class="skills-list">
                     <h3>Keahlian Utama:</h3>
                     <ul>
                         <li>Kemampuan dasar dalam membuat web</li>
                         <li>Kemampuan mengetik dasar</li>
-                            <!--Tab to edit-->
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </section>
+                        <section class="fun-fact">
+    <h3>✨ Fun Fact About Me</h3>
+    <div class="fact-card">
+        <p>Aku suka banget nonton gta RP, apalagi di channel MikazukiArion, aku juga suka banget KPOP, i really love music, music itu kayak udah sebagian hidup aku💙</p>
+    </div>
+</section>
 <section class="skills">
     <h2>My Skills</h2>
     <div class="skills-container">
