--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">Tentang Saya</a></li>
-                <li><a href="#projects">Proyek</a></li> href="#contact">Kontak</a></li>
+                <li><a href="#projects">Proyek</a></li>
+<li><a href="#contact">Kontak</a></li>
+
                 
             </uls="nav-toggle" aria-expanded="false" aria-controls="main-nav">☰</button>
         </nav>
